avoiding parsing events args and messages if the log level is not the needed one for them to be printed